--- a/istanbulBikeMaps/index.html
+++ b/istanbulBikeMaps/index.html
@@ -39,9 +39,9 @@
           '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors | Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a>'
       }).addTo(map)
 
-      L.marker([40.952266, 29.090789])
+      /*    L.marker([40.952266, 29.090789])
         .bindPopup('I am a green leaf.')
-        .addTo(map)
+        .addTo(map)*/
     </script>
     <script src="json.js"></script>
   </body>
