--- a/istanbulBikeMaps/index.html
+++ b/istanbulBikeMaps/index.html
@@ -43,6 +43,6 @@
         .bindPopup('I am a green leaf.')
         .addTo(map)*/
     </script>
-    <script src="json.js"></script>
+    <script src="json.js" async></script>
   </body>
 </html>
