--- a/istanbulBikeMaps/index.html
+++ b/istanbulBikeMaps/index.html
@@ -32,13 +32,37 @@
   <body>
     <div id="map"></div>
     <script>
+      async function get() {
+        let url = 'data.json'
+        let response = await fetch(url)
+
+        if (response.ok) {
+          // if HTTP-status is 200-299
+          // get the response body (the method explained below)
+          let json = await response.json()
+          let stations = json.dataList
+          return stations
+        } else {
+          // alert('HTTP-Error: ' + response.status)
+        }
+      }
+      let stations = get()
+
       var map = L.map('map').setView([41.015137, 28.97953], 10)
 
       L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
         attribution:
           '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors | Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a>'
       }).addTo(map)
-
+      stations.map(
+        (station) =>
+          function () {
+            console.log(station.lat)
+            L.marker([station.lat, station.lon])
+              .bindPopup('I am a green leaf.')
+              .addTo(map)
+          }
+      )
       /*    L.marker([40.952266, 29.090789])
         .bindPopup('I am a green leaf.')
         .addTo(map)*/
