--- a/istanbulBikeMaps/index.html
+++ b/istanbulBikeMaps/index.html
@@ -32,6 +32,7 @@
   <body>
     <div id="map"></div>
     <script>
+      'use strict'
       async function get() {
         let url = 'data.json'
         let response = await fetch(url)
@@ -40,8 +41,7 @@
           // if HTTP-status is 200-299
           // get the response body (the method explained below)
           let json = await response.json()
-          let stations = json.dataList
-          return stations
+          return json
         } else {
           // alert('HTTP-Error: ' + response.status)
         }
@@ -54,7 +54,8 @@
         attribution:
           '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors | Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a>'
       }).addTo(map)
-      stations.map(
+
+      stations.dataList.map(
         (station) =>
           function () {
             console.log(station.lat)
