--- a/istanbulBikeMaps/index.html
+++ b/istanbulBikeMaps/index.html
@@ -46,7 +46,7 @@
           // alert('HTTP-Error: ' + response.status)
         }
       }
-      let stations = get()
+      let stations = await get()
 
       var map = L.map('map').setView([41.015137, 28.97953], 10)
 
