--- a/istanbulBikeMaps/index.html
+++ b/istanbulBikeMaps/index.html
@@ -33,7 +33,7 @@
     <div id="map"></div>
     <script>
       'use strict'
-      async function get() {
+       function get() {
         let url = 'data.json'
         let response = await fetch(url)
 
@@ -46,7 +46,7 @@
           // alert('HTTP-Error: ' + response.status)
         }
       }
-      let stations = await get()
+      let stations = get()
 
       var map = L.map('map').setView([41.015137, 28.97953], 10)
 
