--- a/istanbulBikeMaps/index.html
+++ b/istanbulBikeMaps/index.html
@@ -33,7 +33,7 @@
     <div id="map"></div>
     <script>
       'use strict'
-       function get() {
+      async function get() {
         let url = 'data.json'
         let response = await fetch(url)
 
@@ -47,8 +47,8 @@
         }
       }
       let stations = get()
-
-      var map = L.map('map').setView([41.015137, 28.97953], 10)
+      document.getElementById('map').innerHTML = 'aaaa'
+      /*var map = L.map('map').setView([41.015137, 28.97953], 10)
 
       L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
         attribution:
