--- a/istanbulBikeMaps/index.html
+++ b/istanbulBikeMaps/index.html
@@ -47,7 +47,7 @@
         }
       }
       let stations = get()
-      document.getElementById('map').innerHTML = stations
+      document.getElementById('map').innerHTML = stations.dataList
       /*var map = L.map('map').setView([41.015137, 28.97953], 10)
 
       L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
