--- a/istanbulBikeMaps/index.html
+++ b/istanbulBikeMaps/index.html
@@ -40,8 +40,8 @@
         if (response.ok) {
           // if HTTP-status is 200-299
           // get the response body (the method explained below)
-          let json = await response.json()
-          return json
+          let json = await response
+          return await json
         } else {
           // alert('HTTP-Error: ' + response.status)
         }
