--- a/istanbulBikeMaps/index.html
+++ b/istanbulBikeMaps/index.html
@@ -46,7 +46,7 @@
         }
         document.getElementById('map').innerHTML = json.dataList
       }
-      let stations = get().json
+      get()
       /*var map = L.map('map').setView([41.015137, 28.97953], 10)
 
       L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
