--- a/istanbulBikeMaps/index.html
+++ b/istanbulBikeMaps/index.html
@@ -32,7 +32,6 @@
   <body>
     <div id="map"></div>
     <script>
-      'use strict'
       async function get() {
         let url = 'data.json'
         let response = await fetch(url)
@@ -40,14 +39,15 @@
         if (response.ok) {
           // if HTTP-status is 200-299
           // get the response body (the method explained below)
-          let json = await response.json
-          document.getElementById('map').innerHTML = await json.dataList
+          let json = await response.json()
+          return json
         } else {
           // alert('HTTP-Error: ' + response.status)
         }
       }
-      get()
-      /*var map = L.map('map').setView([41.015137, 28.97953], 10)
+      let stations = get()
+
+      var map = L.map('map').setView([41.015137, 28.97953], 10)
 
       L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
         attribution:
@@ -67,5 +67,6 @@
         .bindPopup('I am a green leaf.')
         .addTo(map)*/
     </script>
+    <script src="json.js" async></script>
   </body>
 </html>
