--- a/istanbulBikeMaps/index.html
+++ b/istanbulBikeMaps/index.html
@@ -40,7 +40,7 @@
           // if HTTP-status is 200-299
           // get the response body (the method explained below)
           let json = await response.json()
-          return await JSON.parse(json)
+          return await JSON.parse(JSON.stringify(json))
         } else {
           // alert('HTTP-Error: ' + response.status)
         }
