--- a/istanbulBikeMaps/index.html
+++ b/istanbulBikeMaps/index.html
@@ -32,19 +32,14 @@
   <body>
     <div id="map"></div>
     <script>
-      async function get() {
-        let url = 'data.json'
-        let response = await fetch(url)
-
-        if (response.ok) {
-          // if HTTP-status is 200-299
-          // get the response body (the method explained below)
-          let json = await response.json()
-          return await JSON.parse(JSON.stringify(json))
-        } else {
-          // alert('HTTP-Error: ' + response.status)
-        }
+      xhttp = new XMLHttpRequest()
+      xhttp.open('POST', 'data.json', true)
+      xhttp.withCredentials = true
+      xhttp.onload = function () {
+        let data = JSON.parse(this.response)
+        console.log(data)
       }
+      xhttp.send()
       let stations = get()
 
       var map = L.map('map').setView([41.015137, 28.97953], 10)
