--- a/istanbulBikeMaps/index.html
+++ b/istanbulBikeMaps/index.html
@@ -33,7 +33,7 @@
     <div id="map"></div>
     <script>
       xhttp = new XMLHttpRequest()
-      xhttp.open('POST', 'data.json')
+      xhttp.open('GET', 'data.json')
       xhttp.onload = function () {
         let data = JSON.parse(this.response)
         console.log(data)
