--- a/istanbulBikeMaps/index.html
+++ b/istanbulBikeMaps/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>İstanbul İBB Bisiklet İstasyonları</title>
     <link
       rel="stylesheet"
       href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
@@ -29,37 +29,16 @@
       }
     </style>
   </head>
+
   <body>
     <div id="map"></div>
     <script>
-      xhttp = new XMLHttpRequest()
-      xhttp.open('GET', 'data.json')
-      xhttp.onload = function () {
-        let data = JSON.parse(this.response)
-        document.getElementById('map').innerHTML = data
-      }
-      xhttp.send()
-      /*
-
       let map = L.map('map').setView([41.015137, 28.97953], 10)
       L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
         attribution:
-          '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors | Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a>'
+          '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
       }).addTo(map)
-
-      stations.dataList.map(
-        (station) =>
-          function () {
-            console.log(station.lat)
-            L.marker([station.lat, station.lon])
-              .bindPopup('I am a green leaf.')
-              .addTo(map)
-          }
-      )
-      /*    L.marker([40.952266, 29.090789])
-        .bindPopup('I am a green leaf.')
-        .addTo(map)*/
     </script>
-    <script src="json.js" async></script>
+    <script src="marker.js" async></script>
   </body>
 </html>
