--- a/istanbulBikeMaps/index.html
+++ b/istanbulBikeMaps/index.html
@@ -40,5 +40,6 @@
       }).addTo(map)
     </script>
     <script src="marker.js" async></script>
+    <script src="kmlLoader.js" async></script>
   </body>
 </html>
