--- a/istanbulBikeMaps/index.html
+++ b/istanbulBikeMaps/index.html
@@ -15,7 +15,7 @@
       integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
       crossorigin=""
     ></script>
-
+    <script src="L.KML.js"></script>
     <style>
       html,
       body {
