--- a/istanbulBikeMaps/index.html
+++ b/istanbulBikeMaps/index.html
@@ -36,7 +36,7 @@
       let map = L.map('map').setView([41.015137, 28.97953], 10)
       L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
         attribution:
-          '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
+          '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> | <a href="https://data.ibb.gov.tr/">İBB Açık Veri Portalı</a> contributors'
       }).addTo(map)
     </script>
     <script src="marker.js" async></script>
