--- a/istanbulBikeMaps/index.html
+++ b/istanbulBikeMaps/index.html
@@ -3,7 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>İstanbul İBB Bisiklet İstasyonları</title>
+    <title>İstanbul Bisiklet Haritası</title>
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@cakirefekan" />
+    <meta name="twitter:creator" content="@cakirefekan" />
+    <meta name="twitter:title" content="İstanbul Bisiklet Haritası" />
+    <meta
+      name="twitter:description"
+      content="İBB Bisiklet İstasyonları ve Bisiklet Yolları Haritası"
+    />
+    <meta name="twitter:image" content="twitter-card.png" />
     <link
       rel="stylesheet"
       href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
