--- a/istanbulBikeMaps/index.html
+++ b/istanbulBikeMaps/index.html
@@ -12,7 +12,10 @@
       name="twitter:description"
       content="İBB Bisiklet İstasyonları ve Bisiklet Yolları Haritası"
     />
-    <meta name="twitter:image" content="twitter-card.png" />
+    <meta
+      name="twitter:image"
+      content="https://cakirefekan.github.io/istanbulBikeMaps/twitter-card.png"
+    />
     <link
       rel="stylesheet"
       href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
