--- a/istanbulBikeMaps/index.html
+++ b/istanbulBikeMaps/index.html
@@ -44,14 +44,18 @@
 
   <body>
     <div id="map"></div>
+    
     <script>
+      let istanbul = [41.015137, 28.97953]
       let map = L.map('map').setView([41.015137, 28.97953], 10)
       L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
         attribution:
           '&copy; <a target="_blank" href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> | <a target="_blank" href="https://data.ibb.gov.tr/">İBB Açık Veri Portalı</a>'
-      }).addTo(map)
+      }).addTo(map);
+      let overlays = L.control.layers([],{}).addTo(map);
     </script>
     <script src="marker.js" async></script>
     <script src="kmlLoader.js" async></script>
+
   </body>
 </html>
