--- a/istanbulBikeMaps/index.html
+++ b/istanbulBikeMaps/index.html
@@ -46,13 +46,26 @@
     <div id="map"></div>
     
     <script>
-      let istanbul = [41.015137, 28.97953]
-      let map = L.map('map').setView([41.015137, 28.97953], 10)
-      L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+
+     let osmTile = L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
         attribution:
           '&copy; <a target="_blank" href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> | <a target="_blank" href="https://data.ibb.gov.tr/">İBB Açık Veri Portalı</a>'
-      }).addTo(map);
-      let overlays = L.control.layers([],{}).addTo(map);
+      });   
+      let hosmTile = L.tileLayer('http://{s}.tile.openstreetmap.fr/hot/{z}/{x}/{y}.png', {
+        attribution:
+          '&copy; <a target="_blank" href="https://www.hotosm.org/updates/2013-09-29_a_new_window_on_openstreetmap_data">Humanitarian OpenStreetMap</a> | <a target="_blank" href="https://data.ibb.gov.tr/">İBB Açık Veri Portalı</a>'
+      });
+      const baseMaps = {
+        "OpenStreetMap" : osmTile,
+        "Humanitarian" : hosmTile
+      }
+      let istanbul = [41.015137, 28.97953]
+      let map = L.map('map', {
+    center: istanbul,
+    zoom: 10,
+    layers: hosmTile
+})
+      let overlays = L.control.layers(baseMaps,{}).addTo(map);
     </script>
     <script src="marker.js" async></script>
     <script src="kmlLoader.js" async></script>
