--- a/istanbulBikeMaps/index.html
+++ b/istanbulBikeMaps/index.html
@@ -51,7 +51,7 @@
         attribution:
           '&copy; <a target="_blank" href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> | <a target="_blank" href="https://data.ibb.gov.tr/">İBB Açık Veri Portalı</a>'
       });   
-      let hosmTile = L.tileLayer('http://{s}.tile.openstreetmap.fr/hot/{z}/{x}/{y}.png', {
+      let hosmTile = L.tileLayer('https://{s}.tile.openstreetmap.fr/hot/{z}/{x}/{y}.png', {
         attribution:
           '&copy; <a target="_blank" href="https://www.hotosm.org/updates/2013-09-29_a_new_window_on_openstreetmap_data">Humanitarian OpenStreetMap</a> | <a target="_blank" href="https://data.ibb.gov.tr/">İBB Açık Veri Portalı</a>'
       });
