--- a/istanbulBikeMaps/index.html
+++ b/istanbulBikeMaps/index.html
@@ -53,7 +53,7 @@
       });   
       let hosmTile = L.tileLayer('https://{s}.tile.openstreetmap.fr/hot/{z}/{x}/{y}.png', {
         attribution:
-          '&copy; <a target="_blank" href="https://www.hotosm.org/updates/2013-09-29_a_new_window_on_openstreetmap_data">Humanitarian OpenStreetMap</a> | <a target="_blank" href="https://data.ibb.gov.tr/">İBB Açık Veri Portalı</a>'
+          '&copy; <a target="_blank" href="https://www.openstreetmap.fr/copyright-article-13/">Humanitarian, OpenStreetMap</a> | <a target="_blank" href="https://data.ibb.gov.tr/">İBB Açık Veri Portalı</a>'
       });
       const baseMaps = {
         "OpenStreetMap" : osmTile,
