--- a/urbanDrawingSystem/index.html
+++ b/urbanDrawingSystem/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Leaflet Sync Demo - with three maps listening</title>
+    <title>Kentsel Yasarım Aracı - Urban Design Tool</title>
 
     <link
       rel="stylesheet"
