ready for first publish

--- a/odoArchMap/index.html
+++ b/odoArchMap/index.html
@@ -13,8 +13,8 @@
 
 <body>
     <main id="map"></main>
-    Lüle Burgaz: 41.404559, 27.347408
     <script src="assets/map.js"></script>
+    <script src="assets/markers.js"></script>
 </body>
 
 </html>
