search bar & new projects added
New total projects number is 45.
Projects can be searched with searchbar.

--- a/appliedProjectsofArchitecturalCompetitions/index.html
+++ b/appliedProjectsofArchitecturalCompetitions/index.html
@@ -8,13 +8,18 @@
     <link rel="stylesheet" href="assets/normalize.css">
     <link rel="stylesheet" href="assets/style.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
+    <link rel="stylesheet" href="assets/leaflet-search.css" />
+    <link rel="stylesheet" href="assets/leaflet-search.mobile.css" />
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
+    <script src="assets/leaflet-search.js"></script>
 </head>
 
 <body>
     <main id="map"></main>
     <script src="assets/map.js"></script>
     <script src="assets/markers.js"></script>
+    <script src="assets/legend.js"></script>
+    <script src="assets/search.js"></script>
 </body>
 
 </html>
