--- a/appliedProjectsofArchitecturalCompetitions/index.html
+++ b/appliedProjectsofArchitecturalCompetitions/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Uygulanmış Yarışma Projeleri</title>
+    <meta name="description" content="Mimari yarışmaların kazanan ve uygulanmış olan projeleri veri tabanı">
     <link rel="stylesheet" href="assets/normalize.css">
     <link rel="stylesheet" href="assets/style.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
