--- a/appliedProjectsofArchitecturalCompetitions/index.html
+++ b/appliedProjectsofArchitecturalCompetitions/index.html
@@ -5,22 +5,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Uygulanmış Yarışma Projeleri</title>
-    <meta name="description" content="Mimari yarışmaların kazanan ve uygulanmış olan projeleri veri tabanı">
-    <link rel="stylesheet" href="assets/normalize.css">
-    <link rel="stylesheet" href="assets/style.css">
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
-    <link rel="stylesheet" href="assets/leaflet-search.css" />
-    <link rel="stylesheet" href="assets/leaflet-search.mobile.css" />
-    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
-    <script src="assets/leaflet-search.js"></script>
+    <meta name="description" content="Mimari yarışmaların kazanan ve uygulanmış olan projeleri görsel veritabanı">
+    <meta property="og:site_name" content="Uygulanmış Yarışma Projeleri" />
+    <meta property="og:title" content="Uygulanmış Yarışma Projeleri | Applied Projects of Architectural Competitions" />
+    <meta property="og:description" content="Mimari yarışmaların kazanan ve uygulanmış olan projeleri görsel veritabanı. | Applied and winner projects of architectural competitions visual database" />
+    <meta property="og:url" content="https://cakirefekan.github.io/appliedProjectsofArchitecturalCompetitions/index.html" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="http://odoarchitecture.files.wordpress.com/2020/12/harita-1.jpg?w=1024" />
+    <meta property="og:image:secure_url" content="https://odoarchitecture.files.wordpress.com/2020/12/harita-1.jpg?w=1024" />
+    <meta property="og:image:width" content="1280" />
+    <meta property="og:image:height" content="516" />
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:image" content=http://odoarchitecture.files.wordpress.com/2020/12/harita-1.jpg?w=1024 "
+    />
+    <meta property="twitter:site " content="@odoarchitecture " />
+    <link rel="stylesheet " href="assets/normalize.css ">
+    <link rel="stylesheet " href="assets/style.css ">
+    <link rel="stylesheet " href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css " />
+    <link rel="stylesheet " href="assets/leaflet-search.css " />
+    <link rel="stylesheet " href="assets/leaflet-search.mobile.css " />
+    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js "></script>
+    <script src="assets/leaflet-search.js "></script>
 </head>
 
 <body>
-    <main id="map"></main>
-    <script src="assets/map.js"></script>
-    <script src="assets/markers.js"></script>
-    <script src="assets/legend.js"></script>
-    <script src="assets/search.js"></script>
+    <main id="map "></main>
+    <script src="assets/map.js "></script>
+    <script src="assets/markers.js "></script>
+    <script src="assets/legend.js "></script>
+    <script src="assets/search.js "></script>
 </body>
 
 </html>
