--- a/appliedProjectsofArchitecturalCompetitions/index.html
+++ b/appliedProjectsofArchitecturalCompetitions/index.html
@@ -11,12 +11,12 @@
     <meta property="og:description" content="Mimari yarışmaların kazanan ve uygulanmış olan projeleri görsel veritabanı. | Applied and winner projects of architectural competitions visual database" />
     <meta property="og:url" content="https://cakirefekan.github.io/appliedProjectsofArchitecturalCompetitions/index.html" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="http://odoarchitecture.files.wordpress.com/2020/12/harita-1.jpg?w=1024" />
-    <meta property="og:image:secure_url" content="https://odoarchitecture.files.wordpress.com/2020/12/harita-1.jpg?w=1024" />
-    <meta property="og:image:width" content="1280" />
-    <meta property="og:image:height" content="516" />
+    <meta property="og:image" content="http://odoarchitecture.files.wordpress.com/2020/12/harita-1.jpg?w=300" />
+    <meta property="og:image:secure_url" content="https://odoarchitecture.files.wordpress.com/2020/12/harita-1.jpg?w=300" />
+    <meta property="og:image:width" content="300" />
+    <meta property="og:image:height" content="151" />
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:image" content=http://odoarchitecture.files.wordpress.com/2020/12/harita-1.jpg?w=1024"
+    <meta property="twitter:image" content="http://odoarchitecture.files.wordpress.com/2020/12/harita-1.jpg?w=1024"
     />
     <meta property="twitter:site" content="@odoarchitecture" />
     <link rel="stylesheet" href="assets/normalize.css">
