--- a/appliedProjectsofArchitecturalCompetitions/index.html
+++ b/appliedProjectsofArchitecturalCompetitions/index.html
@@ -2,10 +2,10 @@
 <html lang="tr">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Uygulanmış Yarışma Projeleri</title>
-    <meta name="description" content="Mimari yarışmaların kazanan ve uygulanmış olan projeleri görsel veritabanı">
+    <meta name="description" content="Mimari yarışmaların kazanan ve uygulanmış olan projeleri görsel veritabanı" />
     <meta property="og:site_name" content="Uygulanmış Yarışma Projeleri" />
     <meta property="og:title" content="Uygulanmış Yarışma Projeleri | Applied Projects of Architectural Competitions" />
     <meta property="og:description" content="Mimari yarışmaların kazanan ve uygulanmış olan projeleri görsel veritabanı. | Applied and winner projects of architectural competitions visual database" />
@@ -16,11 +16,10 @@
     <meta property="og:image:width" content="1024" />
     <meta property="og:image:height" content="516" />
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:image" content="http://odoarchitecture.files.wordpress.com/2020/12/harita-1.jpg?w=1024"
-    />
+    <meta property="twitter:image" content="http://odoarchitecture.files.wordpress.com/2020/12/harita-1.jpg?w=1024" />
     <meta property="twitter:site" content="@odoarchitecture" />
-    <link rel="stylesheet" href="assets/normalize.css">
-    <link rel="stylesheet" href="assets/style.css">
+    <link rel="stylesheet" href="assets/normalize.css" />
+    <link rel="stylesheet" href="assets/style.css" />
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
     <link rel="stylesheet" href="assets/leaflet-search.css" />
     <link rel="stylesheet" href="assets/leaflet-search.mobile.css" />
@@ -34,6 +33,7 @@
     <script src="assets/markers.js"></script>
     <script src="assets/legend.js"></script>
     <script src="assets/search.js"></script>
+    <script src="assets/positioner.js"></script>
 </body>
 
 </html>
