--- a/eventTimer/index.html
+++ b/eventTimer/index.html
@@ -1,1 +1,1 @@
-<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vS3uQdR2LEPR-e5tjzscpa_4be0jN6Fwq_7moodNm7zY7plP-r3E4eWkTYlWggMBq353cnacilerNCB/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
+<iframe style="width:100%;hegiht:100%" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vS3uQdR2LEPR-e5tjzscpa_4be0jN6Fwq_7moodNm7zY7plP-r3E4eWkTYlWggMBq353cnacilerNCB/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
